# ------------------------------------------------------------------------------
# Copyright 2019 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "knx_rs"
version = "0.0.5"
edition = "2018"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]

description = "KNX Library"

repository = "https://github.com/uwearzt/knx_rs"
readme = "README.md"

categories = ["network-programming", "embedded"]
keywords = ["KNX", "Network"]
license = "Apache-2.0"

[dependencies]
byteorder = { version = "1.3.1", default-features = false }
nom = { version= "4.2.0", default-features = false }
enum-primitive-derive = "0.1.2"
num-traits = { version = "0.2.6", default-features = false }
