# ------------------------------------------------------------------------------
# Copyright 2019-2021 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "knx_rs"
version = "0.1.0"
edition = "2018"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]

description = "KNX Library"

repository = "https://github.com/uwearzt/knx_rs"
readme = "README.md"

categories = ["network-programming", "embedded"]
keywords = ["KNX", "Network"]
license = "Apache-2.0"

[dependencies]
byteorder = { version = "1.3.2", default-features = false }
nom = { version= "7.0.0" }
enum-primitive-derive = "0.2.1"
num-traits = { version = "0.2.8", default-features = false }
