# ------------------------------------------------------------------------------
# Copyright 2022 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------
[workspace]

members = [
    "knx_rs",
    "knx_macro",
    "knxproj",
    "logger",
    "knx_influxdb",
]

exclude = [
    "roomsensor",
]
