# ------------------------------------------------------------------------------
# Copyright 2021 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "knx_influxdb"
version = "0.1.0"
edition = "2021"

[dependencies]
knx_rs = { path = "../knx_rs" }

influxdb2 ="0.2.0"
futures = { version = "0.3.23", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
