# ------------------------------------------------------------------------------
# Copyright 2021 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "knx_rs"
version = "0.1.0"
edition = "2021"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]

description = "KNX Library"

repository = "https://github.com/uwearzt/knx_rs"
readme = "README.md"

categories = ["no-std", "network-programming", "embedded"]
keywords = ["KNX", "Network"]
license = "Apache-2.0"

[dependencies]
enum-primitive-derive = "0.2.2"
num-traits = { version = "0.2.8", default-features = false }
log = "0.4.14"
strum = { version = "0.23.0", optional = true }
strum_macros = { version = "0.23.1", optional = true }
# until version 7.1 is released
nom = { git = "https://github.com/Geal/nom.git", default-features = false }

[features]
default = ["std"]
std = ["nom/alloc", "strum", "strum_macros"]