# ------------------------------------------------------------------------------
# Copyright 2021 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "knx_rs"
version = "0.1.0"
edition = "2021"
authors = ["Uwe Arzt <mail@uwe-arzt.de>"]

description = "KNX Library"

repository = "https://github.com/uwearzt/knx_rs"
readme = "README.md"

categories = ["no-std", "network-programming", "embedded"]
keywords = ["KNX", "Network"]
license = "Apache-2.0"

[dependencies]
knx_macro = { path = "../knx_macro" }

enum-primitive-derive = "0.2.2"
num-traits = { version = "0.2.15", default-features = false }
log = "0.4.17"
nom = { version = "7.1.3", default-features = false }
regex = { version = "1.6.0", optional = true }

[build-dependencies]

[features]
default = ["std"]
std = ["nom/alloc", "regex"]