# ------------------------------------------------------------------------------
# Copyright 2021 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[dependencies]
knx_rs = { path = "../knx_rs" }
knxproj = { path = "../knxproj" }
clap = { version = "3.0.5", features = ["cargo"] }
log = "0.4.14"
log4rs = "1.0.0"
serial = "0.4.0"