# ------------------------------------------------------------------------------
# Copyright 2021-2022 Uwe Arzt, mail@uwe-arzt.de
# SPDX-License-Identifier: Apache-2.0
# ------------------------------------------------------------------------------

[package]
name = "roomsensor"
version = "0.1.0"
edition = "2021"

[dependencies]
knx_rs = { path = "../knx_rs", default-features = false }
knx_macro = { path = "../knx_macro" }

embassy-sync = { version = "0.1.0", path = "../../../rust/embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "../../../rust/embassy/embassy-executor", features = ["defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../../../rust/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-32768hz"] }
embassy-stm32 = { version = "0.1.0", path = "../../../rust/embassy/embassy-stm32", features = ["nightly", "defmt", "time-driver-any", "stm32g431kb", "memory-x", "unstable-pac", "exti"]  }
embassy-hal-common = {version = "0.1.0", path = "../../../rust/embassy/embassy-hal-common" }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }

#scd4x = { git="https://github.com/hauju/scd4x-rs.git" }
